# rust-opengl-game-engine

./: .env-example  .gitlab-ci.yml  Cargo.toml  Makefile.toml  README.md
resources/models/: base.vox
src/: _100_1_ecs.rs  _10_1_1_load_vox.rs  _1_1_2_hello_window.rs  _1_2_1_hello_triangle.rs  _1_2_2_hello_triangle_indexed.rs  _1_7_2_camera_keyboard.rs  _1_7_3_camera_mouse.rs  camera.rs  chunk.rs  common.rs  config.rs  errors.rs  game.rs  lib.rs  lifecycle.rs  macros.rs  main.rs  material.rs  math.rs  mesh.rs  mesh_data.rs  palette.rs  scene_graph.rs  scene_tree.rs  shader.rs  shared.rs  texture.rs  time.rs  vertex.rs  vox_loader.rs  window.rs
src/components/: camera.rs  mesh_render.rs  mod.rs  parent.rs  player.rs  transform.rs
src/input/: input.rs  keyboard.rs  keycode_normalizer.rs  mod.rs
src/resources/: active_camera.rs  mod.rs  rotating_entity.rs  terrain.rs
src/shaders/: 7.2.camera.fs  7.2.camera.vs  chunk.fs  chunk.vs
src/systems/: after_render.rs  gui_rendering.rs  mod.rs  mouse_control.rs  player_movement.rs  render.rs  rotator.rs  swap_frame_buffer.rs  transform.rs  transformation.rs  window_event.rs
src/tree/: mod.rs
src/vec_tree/: mod.rs
src/voxel/: chunk.rs  chunk_set.rs  direction.rs  mesh_data.rs  mod.rs  position.rs  terrain.rs  voxel.rs  voxel_geometry.rs  voxel_mesh_builder.rs
