[package]
name = "glbs"
version = "0.1.0"
authors = ["Arnaud Valensi <arnaud.valensi@gmail.com>"]

[dependencies]
gl = "0.6.0"
glutin = "*"
cgmath = "0.16.1"
image = "0.14.0"
floating-duration = "0.1.2"
dot_vox = "1.0.0"
error-chain = "0.12.0"
specs = "0.11"
imgui-opengl-renderer = { path = "../rust-imgui-opengl-renderer" }
imgui = "0.0.19-pre"

[patch.crates-io]
imgui = { git = "https://github.com/Gekkio/imgui-rs.git" }
