[package]
name = "bigseed"
version = "0.1.0"
authors = ["Arnaud Valensi <arnaud.valensi@gmail.com>"]

[dependencies]
gl = "0.6.1"
glutin = "0.14.0"
cgmath = "0.16.1"
image = "0.14.0"
floating-duration = "0.1.2"
dot_vox = "3.1.0"
failure =  "0.1.2"
specs = "0.12.2"
imgui = "0.0.19-pre"

[dependencies.imgui-opengl-renderer]
git = "https://github.com/michaelfairley/rust-imgui-opengl-renderer.git"
rev = "52ea13c6a619091902a4877db3ed53eb8ae28a34"

[patch.crates-io]
imgui = { git = "https://github.com/Gekkio/imgui-rs.git" }
